# language-haskell

./: .gitignore  .vscodeignore  C2Hs-configuration.json  CHANGELOG.md  DEVELOPMENT.md  Hsc2Hs-configuration.json  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  convert_yaml.makefile  haskell-configuration.json  haskell.configuration.json  literate-haskell-configuration.json  make_json.sh  package-lock.json  package.json  test.hs  tsconfig.json  webpack.config.js
.github/workflows/: github-ci.yml  release.yaml
scope-lists/: alex.md  alex.yaml  cabal.md  cabal.yaml  cabalProject.yaml  happy.md  happy.yaml  haskell.md  haskell.scope-db.yaml  literateHaskell.md  literateHaskell.yaml  refresh.hs  refresh.py
snippets/: haskell.json
src/: extension.ts
syntax-examples/: alex.x  cabal.cabal  cabal.project  happy.y  haskell.hs
syntaxes/: C2Hs.json  Hsc2Hs.json  alex.YAML-tmLanguage  cabal.YAML-tmLanguage  cabal.tmLanguage  cabal.tmLanguage.json  cabalProject.YAML-tmLanguage  cabalProject.json  codeblock-cabal.json  codeblock-haskell.json  codeblock-literate-haskell.json  haddock.YAML-tmLanguage  happy.YAML-tmLanguage  haskell.YAML-tmLanguage  haskell.tmLanguage  haskell.tmLanguage.json  literateHaskell.YAML-tmLanguage  literateHaskell.tmLanguage  literateHaskell.tmLanguage.json
test/: test.sh
test/syntax-examples/: LiquidHaskell.hs  TypeLevelStrings.hs  embedding.md  test.cabal  test.hs
test/tests/: ADTs.hs  Alex.x  Alex2.x  Arrows.hs  BlockComments.hs  CPP.hs  Class.hs  CommentLike.hs  Comments.hs  Data1.hs  Data2.hs  Data3.hs  EndTypeSig.hs  Exports.hs  Fields.hs  (+53 more)
(+81 files in other folders)
